<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.training.android.dle.gridimagesearch.activity.SearchSettingActivity"
    android:id="@+id/activity_search_setting">

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spSize"
        android:spinnerMode="dropdown"
        android:layout_alignBottom="@+id/tvImageSize"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/tvImageSize"
        android:layout_toEndOf="@+id/tvImageSize" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/image_size"
        android:id="@+id/tvImageSize"
        android:layout_below="@+id/tvTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="54dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_activity_search_setting"
        android:id="@+id/tvTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btnSave"
        android:layout_marginBottom="69dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/color_filter"
        android:id="@+id/tvColor"
        android:layout_below="@+id/spSize"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="25dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spColor"
        android:spinnerMode="dropdown"
        android:paddingTop="25dp"
        android:layout_alignTop="@+id/tvColor"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/spSize"
        android:layout_alignStart="@+id/spSize" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/type"
        android:id="@+id/tvType"
        android:layout_below="@+id/spColor"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="25dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spType"
        android:layout_below="@+id/spColor"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/spColor"
        android:layout_alignStart="@+id/spColor"
        android:paddingTop="25dp"
        android:spinnerMode="dropdown" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/site"
        android:id="@+id/tvSite"
        android:layout_below="@+id/spType"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="50dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etSite"
        android:layout_alignTop="@+id/tvSite"
        android:layout_alignLeft="@+id/spType"
        android:layout_alignStart="@+id/spType"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingTop="50dp" />

</RelativeLayout>
